<resources>
    <string name="app_name">BloodProject</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rakthadhaan</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_raisedrequests">Raised Requests</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_nearestbloodbanks">Nearest Blood Banks</string>
    <string name="menu_nearesthospitals">Nearest Hospitals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_key">AlzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
</resources>